Replaces use of Arrays.asList by List.of